# agentic_workflows

./: .gitignore  Multi-Agent-Stand-Up.ipynb  README.md  pyproject.toml
examples/: L1_Multi-Agent_Conversation_and_Stand-up_Comedy (1).ipynb  L3_customer_support.ipynb  L5_tasks_event_planning.ipynb
utils/: formatter.py  model_loader.py
