[project]
name = "agentic_workflows"
version = "0.1.0"
description = "Convert example agentic workflows to use langchain for flexible LLM loading"
requires-python = ">=3.9.6"

dependencies = [
    "autogen==0.9.6",
    "ipykernel==6.29.5",
    "langchain_community==0.3.27",
    "python-dotenv==1.1.1",
    "rich==14.0.0",
    "torch==2.7.1",
    "langchain-huggingface==0.3.0",
]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"
